--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.MeaningApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">#6200EE</item>
-        <item name="colorSecondary">#03DAC6</item>
-        <item name="android:statusBarColor">#6200EE</item>
+    <style name="Theme.MeaningApp" parent="android:Theme.Material.NoActionBar">
+        <item name="android:colorPrimary">#6200EE</item>
+        <item name="android:colorSecondary">#03DAC6</item>
     </style>
 
-    <style name="Theme.Material3.Dark.NoActionBar" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">#BB86FC</item>
-        <item name="colorSecondary">#03DAC6</item>
-    </style>
+    <style name="Theme.Material3.DayNight.NoActionBar" parent="Theme.MeaningApp" />
 </resources>
